--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ScrollingActivity">
+        </activity>
         <activity android:name=".LanucherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
